    "SWARM") got changed from sb1-swarm-bn to sb1-bcm91250a while the
    2.4 kernel uses the former.  Update the kernel selection and the
    test suite.
  * Remove kernel detection for LASAT since this machine was never
    supported.
  * Add kernel detection for 2.6 mips and mipsel kernels.
  * Add test suite entries for Broadcom BCM91480B evaluation board (aka
    "BigSur") and SGI O2 (IP32).

 -- Martin Michlmayr <tbm@cyrius.com>  Fri, 17 Mar 2006 20:31:16 +0000

base-installer (1.50) unstable; urgency=low

  * Add PPC970MP (actually PPC970*) and POWER5 to the list of powerpc64
    systems (closes: #339283, http://launchpad.net/bugs/35116).
  * Don't consider powerpc64 kernels usable on powerpc.
  * Update mips for 2.6. There's no r5k-ip22 kernel package any more in 2.6,
    but apparently the r4k-ip22 kernel works. Add r5k tests based on a
    cpuinfo from http://lists.debian.org/debian-mips/2001/08/msg00107.html.

  [ Updated translations ]
  * Hindi (hi.po) by Nishant Sharma
  * Albanian (sq.po) by Elian Myftiu

 -- Colin Watson <cjwatson@debian.org>  Fri, 17 Mar 2006 12:45:07 +0000

base-installer (1.49) unstable; urgency=HIGH

  * Move 00IgnoreTimeConflict creation so it happens for any type of apt
    source, this is needed so the apt-get update in base-installer's postinst
    works. Other settings of --ignore-time-conflict should be removed from
    the rest of d-i eventually.

 -- Joey Hess <joeyh@debian.org>  Mon,  6 Mar 2006 15:58:44 -0500

base-installer (1.48) unstable; urgency=low

  [ Christian Perrier ]
  * Add some comments for translators in templates.

  [ Frans Pop ]
  * Redirect stderr from apt-cache to avoid warnings in syslog.
  * Remove incorrect db_subst statement for no-generator template.

  [ Updated translations ]
  * Bosnian (bs.po) by Safir Secerovic
  * Hungarian (hu.po) by SZERVÑC Attila
  * Swedish (sv.po) by Daniel Nylander

 -- Frans Pop <fjp@debian.org>  Sun,  5 Mar 2006 02:22:27 +0100
