@@ -1,0 +1,13 @@
+system type		: Digital DECstation 5000/1xx
+processor		: 0
+cpu model		: R3000A V3.0  FPU V4.0
+BogoMIPS		: 32.75
+wait instruction	: no
+microsecond timers	: no
+tlb_entries		: 64
+extra interrupt vector	: no
+hardware watchpoint	: no
+VCED exceptions		: not available
+VCEI exceptions		: not available
+ll emulations		: 1
+sc emulations		: 1
