@@ -1,0 +1,13 @@
+subarch r3k-kn02
+cpuinfo r3k-kn02.cpuinfo
+majors 2.4
+flavour r3k-kn02
+kernel-2.4 kernel-image-2.4.27-r3k-kn02
+usable \
+  kernel-image-2.4.27-r3k-kn02
+unusable \
+  kernel-image-2.4.27-r4k-kn04 \
+  kernel-image-2.4.27-r5k-cobalt \
+  kernel-image-2.4.27-r5k-lasat \
+  kernel-image-2.4.27-sb1-swarm-bn
+
