@@ -1,0 +1,10 @@
+cpu model		: R4000SC V3.0
+system type		: Digital DECstation 5000/1xx
+BogoMIPS		: 49.68
+unaligned accesses	: 0
+wait instruction	: no
+microsecond timers	: no
+extra interrupt vector	: no
+hardware watchpoint	: yes
+VCED exceptions		: 6565
+VCEI exceptions		: 11303
