@@ -1,0 +1,13 @@
+subarch r4k-kn04
+cpuinfo r4k-kn04.cpuinfo
+majors 2.4
+flavour r4k-kn04
+kernel-2.4 kernel-image-2.4.27-r4k-kn04
+usable \
+  kernel-image-2.4.27-r4k-kn04
+unusable \
+  kernel-image-2.4.27-r3k-kn02 \
+  kernel-image-2.4.27-r5k-cobalt \
+  kernel-image-2.4.27-r5k-lasat \
+  kernel-image-2.4.27-sb1-swarm-bn
+
