@@ -9,6 +9,7 @@ base-installer (1.51) unstable; urgency=low
   * Add kernel detection for 2.6 mips and mipsel kernels.
   * Add test suite entries for Broadcom BCM91480B evaluation board (aka
     "BigSur") and SGI O2 (IP32).
+  * Add test suite entries for R3K and R4K based DECstations.
 
  -- Martin Michlmayr <tbm@cyrius.com>  Fri, 17 Mar 2006 20:31:16 +0000
 
